# tmux-pane-border

./: Cargo.toml  README.md  tmux-pane-border.tmux
scripts/: install.sh
src/: border.rs  config.rs  main.rs  pty.rs  signal.rs  vt_filter.rs
