[package]
name = "tmux-pane-border"
version = "0.1.0"
edition = "2021"
description = "PTY wrapper that draws a colored border around tmux panes"
license = "MIT"

[dependencies]
nix = { version = "0.29", features = ["term", "ioctl", "signal", "poll", "process", "fs"] }
signal-hook = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
